Avoid deprecation (in Java 9)